made some content edits

--- a/pages/sample/card.html
+++ b/pages/sample/card.html
@@ -24,7 +24,7 @@ permalink: "patterns/card.html"
 <h2>Default card</h2>
 
 <p>
-  The default card that consists of a heading, description and sometimes an call
+  The default card that consists of a heading, description and sometimes a call
   to action.
 </p>
 
