--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -47,8 +47,7 @@ permalink: "visual-design/typography.html"
           <li><code>Segoe UI</code> targets Windows and Windows Phone.</li>
           <li><code>Roboto</code> targets Android and newer Chrome OS’. It is deliberately listed after Segoe UI so that if you’re an Android developer on Windows and have Roboto installed, Segoe UI will be used instead.</li>
           <li><code>Helvetica Neue</code> targets pre-El Capitan versions of Mac OS X. It is listed close to the end because it’s a popular font on other non-El Capitan computers.</li>
-          <li><code>Noto Sans</code>, <code>Liberation Sans</code> Linux sans-serif fallback.</li>
-          <li><code>sans-serif</code> sans serif fallback</li>
+          <li><code>Noto Sans</code>, <code>Liberation Sans</code> are Linux sans-serif fallbacks.</li>
           <li><code>sans-serif</code> is the default sans-serif fallback font.<p></p></li>
         </ul>
       
