--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -34,12 +34,50 @@ permalink: "visual-design/typography.html"
     </p>
 
    
-        <h2>Typeface</h2>
+
+        <div class="row">
+          <div class="col-md-7 p-r-lg">
+            <h2 id="Typeface">Typeface</h2>
+            <p>
+              The State Web Template uses
+              <a href="https://public-sans.digital.gov/">Public Sans</a>
+              designed by the
+              <a href="https://designsystem.digital.gov/">
+                United States Web Design System</a>
+              . This strong, neutral typeface is used for text and headings.
+            </p>
+            <p>
+              <a class="btn btn-default brd-primary color-primary" href="https://fonts.google.com/specimen/Public+Sans#standard-styles">
+                Public Sans in Google Fonts</a>
+            </p>
+          </div>
+          <div class="col-md-5">
+            <span class="text-huge">Aa</span>
+            <div>
+              <p class="text-tiny">
+                A B C D E F G H I J K L M N O P Q R S T U V W X Y Z
+              </p>
+              <p class="text-tiny">
+                a b c d e f g h i j k l m n o p q r s t u v w x y z
+              </p>
+              <p class="text-tiny">0 1 2 3 4 5 6 7 8 9</p>
+            </div>
+          </div>
+        </div>
+
+        <h3>Adding Public Sans google font to your website</h3>
+        <p>Following Public Sans google font API links should be in your website's <code>head</code> section:</p>
+        <pre><code><link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=block" rel="stylesheet" />
+</code></pre>
+
+        <h2>Fallback font</h2>
         <p>
-          The State Web Template uses sytem-ui typeface, which is native font stack that selects the best font-family for each OS and device. Sytem-ui uses modern, sans-serif fonts with zero latency, which is great for performance.
+          In case Public Sans google font fails for some reason the State Web Template will use fallback sytem-ui font, which is native font stack that selects the best font-family for each OS and device. Sytem-ui uses modern, sans-serif fonts with zero latency, which is great for performance.
         </p>
-        <h3 class="h4">Typeface properties and fallbacks</h3>
-<pre>--bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif";
+        <h3 class="h4">Other fallback fonts and properties</h3>
+<pre>system-ui, -apple-system, "Segoe UI", "Roboto", "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif";
 </pre>
         <ul>
           <li><code>system-ui</code> cross-platform generic sans-serif font family (default user interface font)</li>
