Updated template updates page

--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -32,7 +32,29 @@ permalink: "template-updates.html"
   </thead>
   <tbody>
     <tr>
-      <td class="text-bold font-size-16">6.3</td>
+      <td class="text-bold font-size-16">6.3.1</td>
+      <td class="font-size-16">2-23-24</td>
+      <td>
+        <ul class="font-size-16">
+          <li>Mobile navigation accessibility improvements
+            <ul>
+              <li>Added escape key functionality</li>
+              <li>Added closing out navigation functionality on tabbing out</li>
+              <li>Mobile navigation functions are no longer affecting focusable elements that are outside of the navigation</li>
+            </ul>
+          </li>
+          <li>Updated google font delivery method
+            <ul>
+              <li>Replaced font loading from local to CDN google font delivery</li>
+              <li>Added system-ui font fallback</li>
+            </ul>
+          </li>
+          <li>Added utility links to the utility header</li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td class="text-bold font-size-16">6.3.0</td>
       <td class="font-size-16">10-6-23</td>
       <td>
         <ul class="font-size-16">
@@ -55,7 +77,7 @@ permalink: "template-updates.html"
       </td>
     </tr>
     <tr>
-      <td class="text-bold font-size-16">6.2</td>
+      <td class="text-bold font-size-16">6.2.0</td>
       <td class="font-size-16">7-14-23</td>
       <td>
         <ul class="font-size-16">
