added correct font family to the table

--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -113,7 +113,7 @@ permalink: "visual-design/typography.html"
             Use sitewide for all text.
           </td>
           <td class="p-a align-top brd-bottom brd-gray-200">
-            font-family: var(--bs-font-sans-serif);
+            font-family:'Public Sans', system-ui
           </td>
         </tr>
         <tr>
