--- a/pages/sample/colortheme.html
+++ b/pages/sample/colortheme.html
@@ -7,8 +7,8 @@ nocanonical: true
 ---
 
 <div class="container p-t-md">
-  <nav aria-label="You are here">
-    <ol class="breadcrumb">
+  <nav aria-label="You are here" class="breadcrumbs">
+    <ol>
       <li><a href="/" title="Home page">Home</a></li>
       <li>
         <a href="/visual-design/color.html" title="Color themes landing page">
@@ -268,191 +268,191 @@ nocanonical: true
       </div>
     </div>
   </div>
+
+  <style>
+    .palette-disc {
+     width: 134px;
+     height: 134px;
+     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    }
+
+    .insertColorPrimaryHex,
+    .insertColorHighlightHex,
+    .insertColorS1Hex,
+    .insertColorStandoutHex {
+     text-transform: uppercase;
+    }
+  </style>
+
+  <script>
+    function hexToDec(hex) {
+     var colorR = parseInt(hex.substring(0, 2), 16);
+     var colorG = parseInt(hex.substring(2, 4), 16);
+     var colorB = parseInt(hex.substring(4, 6), 16);
+     return [colorR, colorG, colorB];
+    }
+
+    function calcBorder(dec) {
+     // give light colors a darker border
+     var colorR = Math.round(dec[0] * 0.7)
+     var colorG = Math.round(dec[1] * 0.7)
+     var colorB = Math.round(dec[2] * 0.7)
+     return [colorR, colorG, colorB];
+    }
+
+    const themeData = {
+     delta: {
+      name: "Delta",
+      colorHighlight: "A5BDC5",
+      colorPrimary: "577786",
+      colorStandout: "46565E",
+      colorS1: "f5f9fa",
+      altText: "Delta color theme: A blue-gray, a medium-light blue-gray, a light blue-gray, and a dark blue-gray."
+     },
+     eureka: {
+      name: "Eureka",
+      colorHighlight: "D9B295",
+      colorPrimary: "3E4B4D",
+      colorStandout: "21272A",
+      colorS1: "f9f4f0",
+      altText: "Eureka color theme: A dark gray, a beige, an off-white, and an off-black."
+     },
+     mono: {
+      name: "Mono",
+      colorHighlight: "ffce2b",
+      colorPrimary: "545351",
+      colorStandout: "191919",
+      colorS1: "ededef",
+      altText: "Mono color theme: A dark gray, a yellow, a light gray, and an off-black."
+     },
+     oceanside: {
+      name: "Oceanside",
+      colorHighlight: "FDB81E",
+      colorPrimary: "046B99",
+      colorStandout: "323A45",
+      colorS1: "eef8fb",
+      altText: "Oceanside color theme: A medium blue, a yellow, a light blue, and a dark gray."
+     },
+     orangecounty: {
+      name: "Orange County",
+      colorHighlight: "fbad23",
+      colorPrimary: "A15801",
+      colorStandout: "483723",
+      colorS1: "fbf0e7",
+      altText: "Orange County color theme: A dark orange, a yellow-orange, a cream, and a dark brown."
+     },
+     pasorobles: {
+      name: "Paso Robles",
+      colorHighlight: "fbad23",
+      colorPrimary: "691808",
+      colorStandout: "313131",
+      colorS1: "f5f5f5",
+      altText: "Paso Robles color theme: A  dark red, a yellow-orange, a light gray, and a dark brown."
+     },
+     sacramento: {
+      name: "Sacramento",
+      colorHighlight: "7bb0da",
+      colorPrimary: "153554",
+      colorStandout: "730000",
+      colorS1: "e1ecf7",
+      altText: "Sacramento color theme: A dark blue, a medium-light blue, a light blue, and a dark red."
+     },
+     santabarbara: {
+      name: "Santa Barbara",
+      colorHighlight: "FF9B53",
+      colorPrimary: "834B1E",
+      colorStandout: "3c2c29",
+      colorS1: "f8eee4",
+      altText: "Santa Barbara color theme: A brown, a medium-light orange, a cream, and a dark brown."
+     },
+     santacruz: {
+      name: "Santa Cruz",
+      colorHighlight: "f5811b",
+      colorPrimary: "0f4f94",
+      colorStandout: "2c2c4f",
+      colorS1: "eff4fa",
+      altText: "Santa Cruz color theme: A blue, an orange, a light blue, and a dark blue."
+     },
+     shasta: {
+      name: "Shasta",
+      colorHighlight: "fbad23",
+      colorPrimary: "336c39",
+      colorStandout: "3c4543",
+      colorS1: "e4f1e5",
+      altText: "Shasta color theme: A green, a yellow, a light green, and a dark gray."
+     },
+     sierra: {
+      name: "Sierra",
+      colorHighlight: "fbad23",
+      colorPrimary: "447766",
+      colorStandout: "194949",
+      colorS1: "e8f1ee",
+      altText: "Sierra color theme: A green, a yellow, a light green, and a dark green."
+     },
+     trinity: {
+      name: "Trinity",
+      colorHighlight: "c19e73",
+      colorPrimary: "446a7c",
+      colorStandout: "21272a",
+      colorS1: "eff5f8",
+      altText: "Trinity color theme: A blue-gray, a beige, a light gray, and  an off-black."
+     }
+    };
+
+    var queryString = window.location.search.split('?')[1];
+
+    if (!queryString || !themeData[queryString]) {
+     queryString = "delta"; // set a default theme
+
+     if (window.history.replaceState) {
+      // replacing the querystring so that SEO matches
+      window.history.replaceState(null, document.title, location.origin+location.pathname+"?"+queryString);
+     }
+    }
+
+    // insert new color theme css
+    var link = document.createElement("link");
+    link.href = "/state-template/css/colortheme-" + queryString + ".css";
+    link.type = "text/css";
+    link.rel = "stylesheet";
+    link.media = "screen,print";
+    document.getElementsByTagName("head")[0].appendChild(link);
+
+    // Add canonical link for SEQ
+    document.head.appendChild(Object.assign(document.createElement('link'),{href:location.href,rel:"canonical"}));
+
+    // add css class "active" to active nav item
+    var themeNavItem = document.querySelector("nav.side-navigation a[href*='" + queryString + "']");
+    themeNavItem.classList.add("active");
+
+    // insert theme name into breadcrumbs and heading
+    var nameElements = document.querySelectorAll(".insertThemeName");
+    for (let el of nameElements) {
+     el.innerHTML = themeData[queryString].name;
+    }
+
+    // insert alt text for accessibility
+    document.querySelector(".insertAltText").innerHTML = themeData[queryString].altText;
+
+    // display color codes and set border colors
+    document.querySelector(".insertColorHighlightHex").innerHTML = themeData[queryString].colorHighlight;
+    arrayDec = hexToDec(themeData[queryString].colorHighlight);
+    document.querySelector(".insertColorHighlightDec").innerHTML = arrayDec;
+    document.querySelector(".color-palettes .bg-highlight").style.border = "1px solid rgb(" + calcBorder(arrayDec) + ")"
+
+    document.querySelector(".insertColorPrimaryHex").innerHTML = themeData[queryString].colorPrimary;
+    arrayDec = hexToDec(themeData[queryString].colorPrimary);
+    document.querySelector(".insertColorPrimaryDec").innerHTML = arrayDec;
+    document.querySelector(".color-palettes .bg-primary").style.border = "1px solid rgb(" + calcBorder(arrayDec) + ")"
+
+    document.querySelector(".insertColorStandoutHex").innerHTML = themeData[queryString].colorStandout;
+    arrayDec = hexToDec(themeData[queryString].colorStandout);
+    document.querySelector(".insertColorStandoutDec").innerHTML = arrayDec;
+    document.querySelector(".color-palettes .bg-standout").style.border = "1px solid rgb(" + calcBorder(arrayDec) + ")"
+
+    document.querySelector(".insertColorS1Hex").innerHTML = themeData[queryString].colorS1;
+    arrayDec = hexToDec(themeData[queryString].colorS1);
+    document.querySelector(".insertColorS1Dec").innerHTML = arrayDec;
+    document.querySelector(".color-palettes .bg-s1").style.border = "1px solid rgb(" + calcBorder(arrayDec) + ")"
+  </script>
 </div>
-
-<style>
-  .palette-disc {
-   width: 134px;
-   height: 134px;
-   transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-  }
-
-  .insertColorPrimaryHex,
-  .insertColorHighlightHex,
-  .insertColorS1Hex,
-  .insertColorStandoutHex {
-   text-transform: uppercase;
-  }
-</style>
-
-<script>
-  function hexToDec(hex) {
-   var colorR = parseInt(hex.substring(0, 2), 16);
-   var colorG = parseInt(hex.substring(2, 4), 16);
-   var colorB = parseInt(hex.substring(4, 6), 16);
-   return [colorR, colorG, colorB];
-  }
-
-  function calcBorder(dec) {
-   // give light colors a darker border
-   var colorR = Math.round(dec[0] * 0.7)
-   var colorG = Math.round(dec[1] * 0.7)
-   var colorB = Math.round(dec[2] * 0.7)
-   return [colorR, colorG, colorB];
-  }
-
-  const themeData = {
-   delta: {
-    name: "Delta",
-    colorHighlight: "A5BDC5",
-    colorPrimary: "577786",
-    colorStandout: "46565E",
-    colorS1: "f5f9fa",
-    altText: "Delta color theme: A blue-gray, a medium-light blue-gray, a light blue-gray, and a dark blue-gray."
-   },
-   eureka: {
-    name: "Eureka",
-    colorHighlight: "D9B295",
-    colorPrimary: "3E4B4D",
-    colorStandout: "21272A",
-    colorS1: "f9f4f0",
-    altText: "Eureka color theme: A dark gray, a beige, an off-white, and an off-black."
-   },
-   mono: {
-    name: "Mono",
-    colorHighlight: "ffce2b",
-    colorPrimary: "545351",
-    colorStandout: "191919",
-    colorS1: "ededef",
-    altText: "Mono color theme: A dark gray, a yellow, a light gray, and an off-black."
-   },
-   oceanside: {
-    name: "Oceanside",
-    colorHighlight: "FDB81E",
-    colorPrimary: "046B99",
-    colorStandout: "323A45",
-    colorS1: "eef8fb",
-    altText: "Oceanside color theme: A medium blue, a yellow, a light blue, and a dark gray."
-   },
-   orangecounty: {
-    name: "Orange County",
-    colorHighlight: "fbad23",
-    colorPrimary: "A15801",
-    colorStandout: "483723",
-    colorS1: "fbf0e7",
-    altText: "Orange County color theme: A dark orange, a yellow-orange, a cream, and a dark brown."
-   },
-   pasorobles: {
-    name: "Paso Robles",
-    colorHighlight: "fbad23",
-    colorPrimary: "691808",
-    colorStandout: "313131",
-    colorS1: "f5f5f5",
-    altText: "Paso Robles color theme: A  dark red, a yellow-orange, a light gray, and a dark brown."
-   },
-   sacramento: {
-    name: "Sacramento",
-    colorHighlight: "7bb0da",
-    colorPrimary: "153554",
-    colorStandout: "730000",
-    colorS1: "e1ecf7",
-    altText: "Sacramento color theme: A dark blue, a medium-light blue, a light blue, and a dark red."
-   },
-   santabarbara: {
-    name: "Santa Barbara",
-    colorHighlight: "FF9B53",
-    colorPrimary: "834B1E",
-    colorStandout: "3c2c29",
-    colorS1: "f8eee4",
-    altText: "Santa Barbara color theme: A brown, a medium-light orange, a cream, and a dark brown."
-   },
-   santacruz: {
-    name: "Santa Cruz",
-    colorHighlight: "f5811b",
-    colorPrimary: "0f4f94",
-    colorStandout: "2c2c4f",
-    colorS1: "eff4fa",
-    altText: "Santa Cruz color theme: A blue, an orange, a light blue, and a dark blue."
-   },
-   shasta: {
-    name: "Shasta",
-    colorHighlight: "fbad23",
-    colorPrimary: "336c39",
-    colorStandout: "3c4543",
-    colorS1: "e4f1e5",
-    altText: "Shasta color theme: A green, a yellow, a light green, and a dark gray."
-   },
-   sierra: {
-    name: "Sierra",
-    colorHighlight: "fbad23",
-    colorPrimary: "447766",
-    colorStandout: "194949",
-    colorS1: "e8f1ee",
-    altText: "Sierra color theme: A green, a yellow, a light green, and a dark green."
-   },
-   trinity: {
-    name: "Trinity",
-    colorHighlight: "c19e73",
-    colorPrimary: "446a7c",
-    colorStandout: "21272a",
-    colorS1: "eff5f8",
-    altText: "Trinity color theme: A blue-gray, a beige, a light gray, and  an off-black."
-   }
-  };
-
-  var queryString = window.location.search.split('?')[1];
-
-  if (!queryString || !themeData[queryString]) {
-   queryString = "delta"; // set a default theme
-
-   if (window.history.replaceState) {
-    // replacing the querystring so that SEO matches
-    window.history.replaceState(null, document.title, location.origin+location.pathname+"?"+queryString);
-   }
-  }
-
-  // insert new color theme css
-  var link = document.createElement("link");
-  link.href = "/state-template/css/colortheme-" + queryString + ".css";
-  link.type = "text/css";
-  link.rel = "stylesheet";
-  link.media = "screen,print";
-  document.getElementsByTagName("head")[0].appendChild(link);
-
-  // Add canonical link for SEQ
-  document.head.appendChild(Object.assign(document.createElement('link'),{href:location.href,rel:"canonical"}));
-
-  // add css class "active" to active nav item
-  var themeNavItem = document.querySelector("nav.side-navigation a[href*='" + queryString + "']");
-  themeNavItem.classList.add("active");
-
-  // insert theme name into breadcrumbs and heading
-  var nameElements = document.querySelectorAll(".insertThemeName");
-  for (let el of nameElements) {
-   el.innerHTML = themeData[queryString].name;
-  }
-
-  // insert alt text for accessibility
-  document.querySelector(".insertAltText").innerHTML = themeData[queryString].altText;
-
-  // display color codes and set border colors
-  document.querySelector(".insertColorHighlightHex").innerHTML = themeData[queryString].colorHighlight;
-  arrayDec = hexToDec(themeData[queryString].colorHighlight);
-  document.querySelector(".insertColorHighlightDec").innerHTML = arrayDec;
-  document.querySelector(".color-palettes .bg-highlight").style.border = "1px solid rgb(" + calcBorder(arrayDec) + ")"
-
-  document.querySelector(".insertColorPrimaryHex").innerHTML = themeData[queryString].colorPrimary;
-  arrayDec = hexToDec(themeData[queryString].colorPrimary);
-  document.querySelector(".insertColorPrimaryDec").innerHTML = arrayDec;
-  document.querySelector(".color-palettes .bg-primary").style.border = "1px solid rgb(" + calcBorder(arrayDec) + ")"
-
-  document.querySelector(".insertColorStandoutHex").innerHTML = themeData[queryString].colorStandout;
-  arrayDec = hexToDec(themeData[queryString].colorStandout);
-  document.querySelector(".insertColorStandoutDec").innerHTML = arrayDec;
-  document.querySelector(".color-palettes .bg-standout").style.border = "1px solid rgb(" + calcBorder(arrayDec) + ")"
-
-  document.querySelector(".insertColorS1Hex").innerHTML = themeData[queryString].colorS1;
-  arrayDec = hexToDec(themeData[queryString].colorS1);
-  document.querySelector(".insertColorS1Dec").innerHTML = arrayDec;
-  document.querySelector(".color-palettes .bg-s1").style.border = "1px solid rgb(" + calcBorder(arrayDec) + ")"
-</script>
