fixed other pages breadcrumbs

--- a/pages/sample/list-of-articles-or-content-sample.html
+++ b/pages/sample/list-of-articles-or-content-sample.html
@@ -5,8 +5,8 @@ layout: sample-site-news.njk
 permalink: "/patterns/list-of-articles-or-content-sample.html"
 ---
 
-<nav aria-label="Breadcrumb">
-  <ol class="breadcrumb">
+<nav aria-label="Breadcrumb" class="breadcrumbs">
+  <ol>
     <li>
       <a href="/patterns/list-of-articles-or-content.html" title="Home page">
         Home
