--- a/pages/sample/newsroom-sampe-featured.html
+++ b/pages/sample/newsroom-sampe-featured.html
@@ -5,8 +5,8 @@ layout: sample-site-news.njk
 permalink: "/patterns/newsroom-featured-banner.html"
 ---
 
-<nav aria-label="Breadcrumb">
-  <ol class="breadcrumb">
+<nav aria-label="Breadcrumb" class="breadcrumbs">
+  <ol>
     <li><a href="/patterns/newsroom.html" title="Home page">Home</a></li>
     <li class="active">Newsroom</li>
   </ol>
