--- a/pages/sample/structure-search-featured.html
+++ b/pages/sample/structure-search-featured.html
@@ -13,8 +13,8 @@ search: Featured
 
   <div class="container p-b-lg">
     <main class="main-primary">
-      <nav aria-label="You are here">
-        <ol class="breadcrumb">
+      <nav aria-label="You are here" class="breadcrumbs">
+        <ol>
           <li><a href="/" title="Home page">Home</a></li>
           <li>
             <a href="/structure.html" title="Structure landing page">
