--- a/pages/sample/side-navigation-sample-level4.html
+++ b/pages/sample/side-navigation-sample-level4.html
@@ -5,8 +5,8 @@ layout: sample-site.njk
 permalink: "/components/side-navigation-sample-level4.html"
 ---
 
-<nav aria-label="Breadcrumb">
-  <ol class="breadcrumb">
+<nav aria-label="Breadcrumb" class="breadcrumbs">
+  <ol>
     <li>
       <a
         href="/components/side-navigation-sample.html"
