fixed typo in permalink

--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -33,7 +33,9 @@ permalink: "sitemap.html"
                 <a class="d-block m-y" href="/cdn.html">CDN</a>
               </li>
               <li class="m-t-sm">
-                <a class="d-block m-y" href="/get-started/npm.html">NPM package</a>
+                <a class="d-block m-y" href="/get-started/npm.html"
+                  >NPM package</a
+                >
               </li>
             </ul>
           </li>
@@ -68,7 +70,6 @@ permalink: "sitemap.html"
             </ul>
           </li>
         </ul>
-        
 
         <h2 class="h3">Structure</h2>
         <a class="d-block m-y" href="/structure.html">Structure</a>
@@ -134,7 +135,9 @@ permalink: "sitemap.html"
           </li>
         </ul>
         <a class="d-block m-y" href="/visual-design/icons.html">Icons</a>
-        <a class="d-block m-y" href="/visual-design/typography.html">Typography</a>
+        <a class="d-block m-y" href="/visual-design/typography.html"
+          >Typography</a
+        >
         <a class="d-block m-y" href="/visual-design/ui-kit.html">UI kit</a>
       </div>
       <div class="col-md-6">
@@ -198,7 +201,9 @@ permalink: "sitemap.html"
             <a href="/components/tabs.html">Tabs</a>
           </li>
         </ul>
-        <a class="d-block m-y" href="/components/legacy-components.html">Legacy components</a>
+        <a class="d-block m-y" href="/components/legacy-components.html"
+          >Legacy components</a
+        >
         <h2 class="h3">Patterns</h2>
         <a class="d-block m-y" href="/patterns.html">Patterns</a>
         <ul>
@@ -224,7 +229,9 @@ permalink: "sitemap.html"
             <a href="/patterns/newsroom.html">Newsroom</a>
           </li>
           <li class="m-t-sm">
-            <a href="/patterns/list-of-articles-or-content.html">List of articles</a>
+            <a href="/patterns/list-of-articles-or-content.html"
+              >List of articles</a
+            >
           </li>
           <li class="m-t-sm">
             <a href="/patterns/article.html">Article</a>
@@ -238,7 +245,7 @@ permalink: "sitemap.html"
           Conditions of use
         </a>
         <a class="d-block m-y" href="/privacy-policy.html">Privacy policy</a>
-        <a class="d-block m-y" href="/website-acessibility-certification.html">
+        <a class="d-block m-y" href="/website-accessibility-certification.html">
           Accessibility
         </a>
       </div>
