Updates to the utility header and template page

--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -32,6 +32,18 @@ permalink: "template-updates.html"
   </thead>
   <tbody>
     <tr>
+      <td class="text-bold font-size-16">6.3.2</td>
+      <td class="font-size-16">2-23-24</td>
+      <td>
+        <ul class="font-size-16">
+              <li>Updated bootstrap to v5.3.3</li>
+              <li>Fixed mobile search bar resize bug in Android devices</li>
+              <li>Fixed side navigation appending issue that happened on resize from mobile to desktop</li>
+            </ul>
+      </td>
+    </tr>
+
+    <tr>
       <td class="text-bold font-size-16">6.3.1</td>
       <td class="font-size-16">2-23-24</td>
       <td>
