--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -36,10 +36,14 @@ permalink: "template-updates.html"
       <td class="font-size-16">2-23-24</td>
       <td>
         <ul class="font-size-16">
-              <li>Updated bootstrap to v5.3.3</li>
-              <li>Fixed mobile search bar resize bug in Android devices</li>
-              <li>Fixed side navigation appending issue that happened on resize from mobile to desktop</li>
-            </ul>
+          <li>Updated bootstrap to v5.3.3</li>
+          <li>Fixed mobile search bar resize bug in Android devices</li>
+          <li>
+            Fixed side navigation appending issue that happened on resize from
+            mobile to desktop
+          </li>
+          <li>Added local number comma support to number-counter</li>
+        </ul>
       </td>
     </tr>
 
@@ -48,16 +52,23 @@ permalink: "template-updates.html"
       <td class="font-size-16">2-23-24</td>
       <td>
         <ul class="font-size-16">
-          <li>Mobile navigation accessibility improvements
+          <li>
+            Mobile navigation accessibility improvements
             <ul>
               <li>Added escape key functionality</li>
               <li>Added closing out navigation functionality on tabbing out</li>
-              <li>Mobile navigation functions are no longer affecting focusable elements that are outside of the navigation</li>
+              <li>
+                Mobile navigation functions are no longer affecting focusable
+                elements that are outside of the navigation
+              </li>
             </ul>
           </li>
-          <li>Updated google font delivery method
+          <li>
+            Updated google font delivery method
             <ul>
-              <li>Replaced font loading from local to CDN google font delivery</li>
+              <li>
+                Replaced font loading from local to CDN google font delivery
+              </li>
               <li>Added system-ui font fallback</li>
             </ul>
           </li>
@@ -70,9 +81,15 @@ permalink: "template-updates.html"
       <td class="font-size-16">10-6-23</td>
       <td>
         <ul class="font-size-16">
-          <li>Optimized color scheme files by converting SASS color variables into CSS variables</li>
+          <li>
+            Optimized color scheme files by converting SASS color variables into
+            CSS variables
+          </li>
           <li>Updated social media icons inside of CaGov icons font library</li>
-          <li>Published Visual Studio integration with Library Manager (LibMan) allowing .Net users to use the State Template NPM package</li>
+          <li>
+            Published Visual Studio integration with Library Manager (LibMan)
+            allowing .Net users to use the State Template NPM package
+          </li>
           <li>Fixed pagination component</li>
           <li>Updated starter site content</li>
           <li>Added statewide alert component</li>
@@ -99,7 +116,10 @@ permalink: "template-updates.html"
             development
           </li>
           <li>Updated bootstrap version to 5.3</li>
-          <li>Optimized core JavaScript code and referenced it in the head tag next to core CSS references</li>
+          <li>
+            Optimized core JavaScript code and referenced it in the head tag
+            next to core CSS references
+          </li>
           <li>Improved rendering of the site header in mobile view</li>
         </ul>
       </td>
