Updated template to v6.3.4

--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -32,6 +32,16 @@ permalink: "template-updates.html"
   </thead>
   <tbody>
     <tr>
+      <td class="text-bold font-size-16">6.3.4</td>
+      <td class="font-size-16">8-21-24</td>
+      <td>
+        <ul class="font-size-16">
+          <li>Fixed close button alignment in the modal component</li>
+          <li>Fixed search form JavaScript console error</li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
       <td class="text-bold font-size-16">6.3.2</td>
       <td class="font-size-16">6-7-24</td>
       <td>
