--- a/pages/cdn.html
+++ b/pages/cdn.html
@@ -52,11 +52,11 @@ permalink: "cdn.html"
 
     <h2>Examples</h2>
     <h3>Using core CSS files</h3>
-    <pre><span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.2/css/cagov.core.css" <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">integrity=</span><span class="text-accent7">"sha256-kDYMlt+egSpUJHbZGlUHIGRh0b/TYdUgp/x1OnFJw0M="</span> <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span></span><span class="text-accent-p2">&gt;</span>
-<span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.2/css/colortheme-oceanside.css"</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span>  <span class="text-info">integrity=</span><span class="text-accent7">"sha256-PC5Yszm8bAjYYFmjeL8EeB8mHo+S4dJbQt4OwA4aTmg="</span> <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span><br /></pre>
+    <pre><span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/cagov.core.css" <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">integrity=</span><span class="text-accent7">"sha256-E1gw6FZS3euuiCtwnCsNUr+UnAR3Wf26Zqexq6nCQw4="</span> <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span></span><span class="text-accent-p2">&gt;</span>
+<span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-oceanside.css"</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span>  <span class="text-info">integrity=</span><span class="text-accent7">"sha256-PC5Yszm8bAjYYFmjeL8EeB8mHo+S4dJbQt4OwA4aTmg="</span> <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span><br /></pre>
 
     <h3>Using JS files</h3>
-    <pre><span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.2/js/cagov.core.js"</span> <span class="text-info">integrity=</span><span class="text-accent7">"sha256-yNF14BZPyxYOPE0VTyjR9B1JDB3zxShvHXNI0+yRLv8="</span> <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
+    <pre><span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/js/cagov.core.js"</span> <span class="text-info">integrity=</span><span class="text-accent7">"sha256-MjiXAPfgqajlDwvZJ80mAvLPWBiQU0O74UPkudX9gqo="</span> <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
 
     <h3>Crossorigin anonymous</h3>
     <p>
@@ -92,10 +92,10 @@ permalink: "cdn.html"
      <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&amp;display=block"</span><span class="text-accent-p2">&gt;</span>
 
      <span class="text-muted">&lt;!-- State Template CDN CSS --&gt;</span>
-     <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.2/css/cagov.core.css"</span>  <span class="text-info">integrity=</span><span class="text-accent7">"sha256-kDYMlt+egSpUJHbZGlUHIGRh0b/TYdUgp/x1OnFJw0M="</span>  <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span>
-     <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.2/css/colortheme-oceanside.css"</span>   <span class="text-info">integrity=</span><span class="text-accent7">"sha256-PC5Yszm8bAjYYFmjeL8EeB8mHo+S4dJbQt4OwA4aTmg="</span>  <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span>
+     <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/cagov.core.css"</span>  <span class="text-info">integrity=</span><span class="text-accent7">"sha256-E1gw6FZS3euuiCtwnCsNUr+UnAR3Wf26Zqexq6nCQw4="</span>  <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span>
+     <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-oceanside.css"</span>   <span class="text-info">integrity=</span><span class="text-accent7">"sha256-PC5Yszm8bAjYYFmjeL8EeB8mHo+S4dJbQt4OwA4aTmg="</span>  <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span>
      <span class="text-muted">&lt;!-- State Template JavaScript CDN --&gt;</span>
-     <span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.2/js/cagov.core.js"</span> <span class="text-info">integrity=</span><span class="text-accent7">"sha256-yNF14BZPyxYOPE0VTyjR9B1JDB3zxShvHXNI0+yRLv8="</span> <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
+     <span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/js/cagov.core.js"</span> <span class="text-info">integrity=</span><span class="text-accent7">"sha256-MjiXAPfgqajlDwvZJ80mAvLPWBiQU0O74UPkudX9gqo="</span> <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
 
     <span class="text-accent-p2">&lt;/head&gt;</span>
    <span class="text-accent-p2">&lt;body&gt;</span>
@@ -134,6 +134,45 @@ permalink: "cdn.html"
     </p>
     <h3>Web State Template v6 (production)</h3>
     <ol data-aria-accordion data-multi data-transition data-default="none">
+      <li>
+        <h4 data-aria-accordion-heading>Version 6.3.4</h4>
+        <div data-aria-accordion-panel>
+          <p>CSS</p>
+          <pre>
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/cagov.core.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/cagov.core.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-delta.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-delta.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-eureka.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-eureka.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-mono.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-mono.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-oceanside.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-oceanside.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-orangecounty.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-orangecounty.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-pasorobles.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-pasorobles.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-sacramento.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-sacramento.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-santabarbara.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-santabarbara.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-santacruz.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-santacruz.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-sierra.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-sierra.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-shasta.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-shasta.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-trinity.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/css/colortheme-trinity.min.css" rel="stylesheet" crossorigin="anonymous"&gt;</pre
+          >
+          <p>JS</p>
+          <pre>
+&lt;script src="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/js/cagov.core.js" crossorigin="anonymous&gt;&lt;/script&gt;
+&lt;script src="https://cdn.cdt.ca.gov/cdt/statetemplate/6.3.4/js/cagov.core.min.js" crossorigin="anonymous"&gt;&lt;/script&gt;</pre
+          >
+        </div>
+      </li>
       <li>
         <h4 data-aria-accordion-heading>Version 6.3.2</h4>
         <div data-aria-accordion-panel>
