--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -32,6 +32,20 @@ permalink: "template-updates.html"
   </thead>
   <tbody>
     <tr>
+      <td class="text-bold font-size-16">6.4.0</td>
+      <td class="font-size-16">10-18-24</td>
+      <td>
+        <ul class="font-size-16">
+          <li>Updated ca.gov branding</li>
+          <li>Increased the size of the hamburger menu button</li>
+          <li>
+            Added a "button" type to toggle buttons to prevent default "submit"
+            behavior in ASP frameworks
+          </li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
       <td class="text-bold font-size-16">6.3.4</td>
       <td class="font-size-16">8-21-24</td>
       <td>
