--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -32,6 +32,16 @@ permalink: "template-updates.html"
   </thead>
   <tbody>
     <tr>
+      <td class="text-bold font-size-16">6.4.1</td>
+      <td class="font-size-16">11-06-24</td>
+      <td>
+        <ul class="font-size-16">
+          <li>Fixed screen reader menu options availability issue in mobile</li>
+          <li>Updated ca.gov branding icons in cagov icons font</li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
       <td class="text-bold font-size-16">6.4.0</td>
       <td class="font-size-16">10-18-24</td>
       <td>
