adding js defer to reference

--- a/pages/cdn.html
+++ b/pages/cdn.html
@@ -56,7 +56,7 @@ permalink: "cdn.html"
 <span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.1/css/colortheme-oceanside.css"</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span>  <span class="text-info">integrity=</span><span class="text-accent7">"sha256-PC5Yszm8bAjYYFmjeL8EeB8mHo+S4dJbQt4OwA4aTmg="</span> <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span><br /></pre>
 
     <h3>Using JS files</h3>
-    <pre><span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.1/js/cagov.core.js"</span> <span class="text-info">integrity=</span><span class="text-accent7">"sha256-TOklMoh1iWoUNIVyzn+Wq8bS56lQWa0R8qklisvEALo="</span> <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
+    <pre><span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.1/js/cagov.core.js"</span> <span class="text-info">integrity=</span><span class="text-accent7">"sha256-TOklMoh1iWoUNIVyzn+Wq8bS56lQWa0R8qklisvEALo="</span> <span class="text-info">defer</span> <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
 
     <h3>Crossorigin anonymous</h3>
     <p>
@@ -95,7 +95,7 @@ permalink: "cdn.html"
      <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.1/css/cagov.core.css"</span>  <span class="text-info">integrity=</span><span class="text-accent7">"sha256-OGe4kV30/3p8qPhmiORxFvLS/NrPhdifrumYA6W5W5k="</span>  <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span>
      <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.1/css/colortheme-oceanside.css"</span>   <span class="text-info">integrity=</span><span class="text-accent7">"sha256-PC5Yszm8bAjYYFmjeL8EeB8mHo+S4dJbQt4OwA4aTmg="</span>  <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span>
      <span class="text-muted">&lt;!-- State Template JavaScript CDN --&gt;</span>
-     <span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.1/js/cagov.core.js"</span> <span class="text-info">integrity=</span><span class="text-accent7">"sha256-TOklMoh1iWoUNIVyzn+Wq8bS56lQWa0R8qklisvEALo="</span> <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
+     <span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.1/js/cagov.core.js"</span> <span class="text-info">integrity=</span><span class="text-accent7">"sha256-TOklMoh1iWoUNIVyzn+Wq8bS56lQWa0R8qklisvEALo="</span> <span class="text-info">defer</span> <span class="text-info">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
 
     <span class="text-accent-p2">&lt;/head&gt;</span>
    <span class="text-accent-p2">&lt;body&gt;</span>
@@ -168,8 +168,8 @@ permalink: "cdn.html"
           >
           <p>JS</p>
           <pre>
-&lt;script src="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.1/js/cagov.core.js" crossorigin="anonymous&gt;&lt;/script&gt;
-&lt;script src="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.1/js/cagov.core.min.js" crossorigin="anonymous"&gt;&lt;/script&gt;</pre
+&lt;script src="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.1/js/cagov.core.js" defer crossorigin="anonymous&gt;&lt;/script&gt;
+&lt;script src="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.1/js/cagov.core.min.js" defer crossorigin="anonymous"&gt;&lt;/script&gt;</pre
           >
         </div>
       </li>
