--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -32,6 +32,23 @@ permalink: "template-updates.html"
   </thead>
   <tbody>
     <tr>
+      <td class="text-bold font-size-16">6.4.2</td>
+      <td class="font-size-16">1-20-25</td>
+      <td>
+        <ul class="font-size-16">
+          <li>
+            Enhanced the readability of the page navigation component by
+            increasing the font size
+          </li>
+          <li>
+            Decreased vertical spacing between navigation items in the main
+            dropdown menu
+          </li>
+          <li>Removed obsolete and deprecated css code</li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
       <td class="text-bold font-size-16">6.4.1</td>
       <td class="font-size-16">11-06-24</td>
       <td>
