--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -174,7 +174,7 @@ permalink: "/components/side-navigation.html"
         class="nav-link"
         data-bs-toggle="tab"
         role="tab"
-        aria-label="Accordion list source code">
+        aria-label="Implementation notes accordion list tab header">
         Implementation notes
       </a>
     </li>
